# iclr_downloader

./: pyproject.toml
src/iclr_downloader/: __init__.py  core.py
src/iclr_downloader/commands/: download_by_year.py
